--- a/index.html
+++ b/index.html
@@ -83,14 +83,10 @@
       </div>
   </div>
 
-
-  
-  <!-- 
-    <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Wendy Wo</a>.
-     </div>
-  --> 
+    Coded by <a href="https://github.com/wendywo-dev">Wendy Wo</a>.
+  </div>
 
 </body>
 </html>
